--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,8 @@ disqus_shortname: doheejins-blog
 # Google analytics
 ga_tracking_id: "G-1RPNTDL94D"
 
+g-analytics: 263002919
+
 # Category descriptions (for archive pages)
 descriptions:
   - cat: github
